--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.13.8",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.9",
     "postcss": "^8.2.6",
     "postcss-loader": "^5.0.0",
